# nexus-rag

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  REQUIREMENTS.md  SECURITY.md  docker-compose.yml
.github/workflows/: codeql.yml
docs/: dev-setup.md
helm/nexus-rag/: .helmignore  Chart.yaml  README.md  values.yaml
helm/nexus-rag/templates/: NOTES.txt  _helpers.tpl  embedding-service-deployment.yaml  embedding-service-pvc.yaml  embedding-service-service.yaml  ingestion-api-deployment.yaml  ingestion-api-ingress.yaml  ingestion-api-service.yaml  ingestion-worker-deployment.yaml  nats-service.yaml  nats-statefulset.yaml  orchestration-mcp-deployment.yaml  orchestration-mcp-service.yaml  qdrant-service.yaml  qdrant-statefulset.yaml  reranker-service-deployment.yaml  reranker-service-pvc.yaml  reranker-service-service.yaml
infra/keycloak/realm-export/: nexus-rag-realm.json
infra/librechat/: librechat.yaml
infra/litellm/: config.yaml
infra/postgres/: init-app-roles.sh
scripts/: Dockerfile  _keycloak.py  evaluate_retrieval.py  golden_queries.json  seed_sample_data.py
services/common/: pyproject.toml
services/common/common/: __init__.py  claims.py  classification.py  db.py  job_queue.py  metadata.py  models.py  object_store.py  qdrant_filters.py  qdrant_store.py  sparse_embedding.py  versioning.py
services/ingestion-api/: Dockerfile  pyproject.toml
services/ingestion-api/app/: chunking.py  deps.py  main.py  parsing.py
services/ingestion-api/app/routes/: admin.py  auth.py  curate.py  notifications.py  search.py  upload.py
services/ingestion-api/app/templates/: base.html  curate.html  notifications.html  search.html  upload.html
services/ingestion-worker/: Dockerfile  pyproject.toml
services/ingestion-worker/app/: embedding.py  main.py  parsing.py  processing.py
services/orchestration-mcp/: Dockerfile  pyproject.toml
services/orchestration-mcp/app/: rag_search.py  reranking.py  server.py
services/reranker-service/: Dockerfile  pyproject.toml
services/reranker-service/app/: main.py
