[project]
name = "ingestion-api"
version = "0.1.0"
description = "Upload, mandatory tagging, and curation queue API/UI (FR-1..FR-16)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "httpx>=0.27",
    "qdrant-client>=1.10",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "nexus-rag-common",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
