[project]
name = "ingestion-worker"
version = "0.1.0"
description = "Durable parse/chunk/embed/store pipeline (FR-3..FR-6), consuming NATS JetStream (NFR-11)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "qdrant-client>=1.10",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "nexus-rag-common",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
