[project]
name = "reranker-service"
version = "0.1.0"
description = "Cross-encoder reranking pass over hybrid retrieval candidates (FR-25)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
